[tool.poetry]
name = "doky"
version = "1.0.0"
description = "Doky is a intuitive library and CLI tool for manage your Docker-In-Docker instances from Play With Docker Lab"
repository = "https://github.com/d3cryptofc/Doky"
authors = ["Lelzin λ <d3cryptofc@gmail.com>"]
readme = "README.md"
license = "MIT"
include = ["pyproject.toml"]

[tool.poetry.dependencies]
python = "^3.11"
httpx = {extras = ["http2"], version = "^0.26.0"}
click = "^8.1.7"
rich = "^13.7.0"
appdirs = "^1.4.4"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
doky = "doky.__main__:main"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.9"
mkdocstrings-python = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
